VKBootstrap/source/CVkBootstrap.h

enum class VkbPhysicalDeviceError {
    NONE,
    NO_SURFACE_PROVIDED,
    FAILED_ENUMERATE_PHYSICAL_DEVICES,
    NO_PHYSICAL_DEVICES_FOUND,
    NO_SUITABLE_DEVICE,
};
enum class VkbQueueError {
    NONE,
    PRESENT_UNAVAILABLE,
    GRAPHICS_UNAVAILABLE,
    COMPUTE_UNAVAILABLE,
    TRANSFER_UNAVAILABLE,
    QUEUE_INDEX_OUT_OF_RANGE,
    INVALID_QUEUE_FAMILY_INDEX
};
    EXPORT VkAllocationCallbacks* get_allocation_callbacks(VkbInstance instance);
    // Advanced: Get the VkQueueFamilyProperties of the device if special queue setup is needed
    EXPORT void get_queue_families(VkbPhysicalDevice pdevice, VkQueueFamilyProperties** data, size_t* length);
 // namespace VkbPhysicalDeviceFunctions

enum class VkbPreferredDeviceType {
    OTHER = 0,
    INTEGRATED = 1,
    DISCRETE = 2,
    VIRTUAL_GPU = 3,
    CPU = 4,
};
enum class VkbDeviceSelectionMode {
    // return all suitable and partially suitable devices
    PARTIALLY_AND_FULLY_SUITABLE,
    // return only physical devices which are fully suitable
    ONLY_FULLY_SUITABLE,  
};
    
    // Return the first device which is suitable
    // use the `selection` parameter to configure if partially
    EXPORT VkbPhysicalDeviceError select(VkbPhysicalDeviceSelector selector, VkbPhysicalDevice* result, VkbDeviceSelectionMode selection = VkbDeviceSelectionMode::PARTIALLY_AND_FULLY_SUITABLE);
    
    // Return the names of all devices which are considered suitable - intended for applications which want to let the user pick the physical device
    // Note: string_lengths and array_data allocates with malloc(), this leaves the caller 
    // responsible to free the memory.
    EXPORT VkbPhysicalDeviceError select_device_names(VkbPhysicalDeviceSelector selector, const char*** array_data, size_t* array_length, size_t** string_lengths, VkbDeviceSelectionMode selection = VkbDeviceSelectionMode::PARTIALLY_AND_FULLY_SUITABLE);
    
    // Set the surface in which the physical device should render to.
    // Be sure to set it if swapchain functionality is to be used.
    EXPORT void set_surface(VkbPhysicalDeviceSelector selector, VkSurfaceKHR surface);
    // Set the name of the device to select.
    EXPORT void set_name(VkbPhysicalDeviceSelector selector, const char* name, size_t name_char_length);
    // Set the desired physical device type to select. Defaults to PreferredDeviceType::DISCRETE.
    EXPORT void prefer_gpu_device_type(VkbPhysicalDeviceSelector selector, VkbPreferredDeviceType type = VkbPreferredDeviceType::DISCRETE);
    // Allow selection of a gpu device type that isn't the preferred physical device type. Defaults to true.
    EXPORT void allow_any_gpu_device_type(VkbPhysicalDeviceSelector selector, bool allow_any_type = true);
    // Require that a physical device supports presentation. Defaults to true.
    EXPORT void require_present(VkbPhysicalDeviceSelector selector, bool require = true);
    // Require a queue family that supports compute operations but not graphics nor transfer.
    EXPORT void require_dedicated_compute_queue(VkbPhysicalDeviceSelector selector);
    // Require a queue family that supports transfer operations but not graphics nor compute.
    EXPORT void require_dedicated_transfer_queue(VkbPhysicalDeviceSelector selector);
    // Require a queue family that supports compute operations but not graphics.
    EXPORT void require_separate_compute_queue(VkbPhysicalDeviceSelector selector);
    // Require a queue family that supports transfer operations but not graphics.
    EXPORT void require_separate_transfer_queue(VkbPhysicalDeviceSelector selector);
    // Require a memory heap from VK_MEMORY_PROPERTY_DEVICE_LOCAL_BIT with `size` memory available.
    EXPORT void required_device_memory_size(VkbPhysicalDeviceSelector selector, VkDeviceSize size);
    // Require a physical device which supports a specific extension.
    EXPORT void add_required_extension(VkbPhysicalDeviceSelector selector, const char* extension);
    // Require a physical device which supports a set of extensions.
    EXPORT void add_required_extensions(VkbPhysicalDeviceSelector selector, const char** extensions, size_t length);
    // Require a physical device that supports a (major, minor) version of vulkan.
    EXPORT void set_minimum_version(VkbPhysicalDeviceSelector selector, uint32_t major, uint32_t minor);
    // By default PhysicalDeviceSelector enables the portability subset if available
    // This function disables that behavior
    EXPORT void disable_portability_subset(VkbPhysicalDeviceSelector selector);
    // Require a physical device which supports a specific set of general/extension features.
    // If this function is used, the user should not put their own VkPhysicalDeviceFeatures2 in
    // the pNext chain of VkDeviceCreateInfo.
    //
    // Original function:
    //     template <typename T> PhysicalDeviceSelector& add_required_extension_features(T const& features) {
    //         criteria.extended_features_chain.push_back(features);
    //         return *this;
    //     }
    EXPORT void add_required_extension_features(VkbPhysicalDevice selector, void* data, size_t size);
    // Require a physical device which supports the features in VkPhysicalDeviceFeatures.
    EXPORT void set_required_features(VkbPhysicalDeviceSelector selector, VkPhysicalDeviceFeatures const& features);
    // Require a physical device which supports the features in VkPhysicalDeviceVulkan11Features.
    // Must have vulkan version 1.2 - This is due to the VkPhysicalDeviceVulkan11Features struct being added in 1.2, not 1.1
    EXPORT void set_required_features_11(VkbPhysicalDeviceSelector selector, VkPhysicalDeviceVulkan11Features features_11);
    // Require a physical device which supports the features in VkPhysicalDeviceVulkan12Features.
    // Must have vulkan version 1.2
    EXPORT void set_required_features_12(VkbPhysicalDeviceSelector selector, VkPhysicalDeviceVulkan12Features features_12);
    // Require a physical device which supports the features in VkPhysicalDeviceVulkan13Features.
    // Must have vulkan version 1.3
    EXPORT void set_required_features_13(VkbPhysicalDeviceSelector selector, VkPhysicalDeviceVulkan13Features features_13);
    // Used when surface creation happens after physical device selection.
    // Warning: This disables checking if the physical device supports a given surface.
    EXPORT void defer_surface_initialization(VkbPhysicalDeviceSelector selector);
    // Ignore all criteria and choose the first physical device that is available.
    // Only use when: The first gpu in the list may be set by global user preferences and an application may wish to respect it.
    EXPORT void select_first_device_unconditionally(VkbPhysicalDeviceSelector selector, bool unconditionally = true);
 // namespace VkbPhysicalDeviceSelectorFunctions

enum class VkbQueueType {
    PRESENT,
    GRAPHICS,
    COMPUTE,
    TRANSFER,
};
    EXPORT VkDevice get_vk_device(VkbDevice device);
    EXPORT void get_queue_families(VkbDevice device, VkQueueFamilyProperties** queue_families, size_t* length);
    EXPORT VkAllocationCallbacks* get_allocation_callbacks(VkbDevice device);
    
    EXPORT void destroy_device(VkbDevice* device);
    
    EXPORT VkbQueueError get_queue_index(VkbDevice device, VkbQueueType type, uint32_t* result);
    EXPORT VkAllocationCallbacks* get_allocation_callbacks(VkbSwapchain swapchain);
 // namespace VkbSwapchainBuilderFunctions

// A quick little c wrapper to help remove any allocated memory.
EXPORT void _vkb_impl_c_free(void* data);