VKBootstrap/modified_generated_windows.jai

        
        memcpy(result.data, physical_device_results, size_of(PhysicalDevice) * xx length);
        
        return result, error;
    }

    // Return the names of all devices which are considered suitable - intended for applications which want to let the user pick the physical device
    // Note: string_lengths and array_data allocates with malloc(), this leaves the caller
    // responsible to free the memory.
    select_device_names :: (selector: PhysicalDeviceSelector, array_data: ***u8, array_length: *u64, string_lengths: **u64, selection: DeviceSelectionMode = .PARTIALLY_AND_FULLY_SUITABLE) -> PhysicalDeviceError #foreign libvkbootstrap "?select_device_names@VkbPhysicalDeviceSelectorFunctions@@YA?AW4VkbPhysicalDeviceError@@PEAUVkbPhysicalDeviceSelector_T@@PEAPEAPEBDPEA_KPEAPEA_KW4VkbDeviceSelectionMode@@@Z";
    
    // Note: Will have to free the slice.
    select_device_names :: inline (selector: PhysicalDeviceSelector, selection: DeviceSelectionMode = .PARTIALLY_AND_FULLY_SUITABLE) -> []string, PhysicalDeviceError {
        array_data: **u8 = ---;
        array_length: u64 = ---;
        string_lengths: *u64 = ---;
        
        error := select_device_names(selector, *array_data, *array_length, *string_lengths, selection);
        defer _vkb_impl_c_free(array_data);
        defer _vkb_impl_c_free(string_lengths);
        
        result := NewArray(xx array_length, string);
        
        for i : 0..array_length-1 {
            str := *result[i];
            str.data = array_data[i];
            str.count = xx string_lengths[i];      
        }
        
        return result, error;
    }
    
    // Set the surface in which the physical device should render to.
    // Be sure to set it if swapchain functionality is to be used.
    set_surface :: (selector: PhysicalDeviceSelector, surface: VkSurfaceKHR) -> void #foreign libvkbootstrap "?set_surface@VkbPhysicalDeviceSelectorFunctions@@YAXPEAUVkbPhysicalDeviceSelector_T@@PEAUVkSurfaceKHR_T@@@Z";

    // Set the name of the device to select.
    set_name :: (selector: PhysicalDeviceSelector, name: *u8, name_char_length: u64) -> void #foreign libvkbootstrap "?set_name@VkbPhysicalDeviceSelectorFunctions@@YAXPEAUVkbPhysicalDeviceSelector_T@@PEBD_K@Z";
    set_name :: inline (selector: PhysicalDeviceSelector, name: string) #no_context {
        set_name(selector, name.data, xx name.count);
    }

    // Set the desired physical device type to select. Defaults to PreferredDeviceType::DISCRETE.
    prefer_gpu_device_type :: (selector: PhysicalDeviceSelector, type: PreferredDeviceType = .DISCRETE) -> void #foreign libvkbootstrap "?prefer_gpu_device_type@VkbPhysicalDeviceSelectorFunctions@@YAXPEAUVkbPhysicalDeviceSelector_T@@W4VkbPreferredDeviceType@@@Z";

    // Allow selection of a gpu device type that isn't the preferred physical device type. Defaults to true.
    allow_any_gpu_device_type :: (selector: PhysicalDeviceSelector, allow_any_type := true) -> void #foreign libvkbootstrap "?allow_any_gpu_device_type@VkbPhysicalDeviceSelectorFunctions@@YAXPEAUVkbPhysicalDeviceSelector_T@@_N@Z";

    // Require that a physical device supports presentation. Defaults to true.
    require_present :: (selector: PhysicalDeviceSelector, require := true) -> void #foreign libvkbootstrap "?require_present@VkbPhysicalDeviceSelectorFunctions@@YAXPEAUVkbPhysicalDeviceSelector_T@@_N@Z";

    // Require a queue family that supports compute operations but not graphics nor transfer.
    require_dedicated_compute_queue :: (selector: PhysicalDeviceSelector) -> void #foreign libvkbootstrap "?require_dedicated_compute_queue@VkbPhysicalDeviceSelectorFunctions@@YAXPEAUVkbPhysicalDeviceSelector_T@@@Z";

    // Require a queue family that supports transfer operations but not graphics nor compute.
    require_dedicated_transfer_queue :: (selector: PhysicalDeviceSelector) -> void #foreign libvkbootstrap "?require_dedicated_transfer_queue@VkbPhysicalDeviceSelectorFunctions@@YAXPEAUVkbPhysicalDeviceSelector_T@@@Z";

    // Require a queue family that supports compute operations but not graphics.
    require_separate_compute_queue :: (selector: PhysicalDeviceSelector) -> void #foreign libvkbootstrap "?require_separate_compute_queue@VkbPhysicalDeviceSelectorFunctions@@YAXPEAUVkbPhysicalDeviceSelector_T@@@Z";

    // Require a queue family that supports transfer operations but not graphics.
    require_separate_transfer_queue :: (selector: PhysicalDeviceSelector) -> void #foreign libvkbootstrap "?require_separate_transfer_queue@VkbPhysicalDeviceSelectorFunctions@@YAXPEAUVkbPhysicalDeviceSelector_T@@@Z";

    // Require a memory heap from VK_MEMORY_PROPERTY_DEVICE_LOCAL_BIT with `size` memory available.
    required_device_memory_size :: (selector: PhysicalDeviceSelector, size: VkDeviceSize) -> void #foreign libvkbootstrap "?required_device_memory_size@VkbPhysicalDeviceSelectorFunctions@@YAXPEAUVkbPhysicalDeviceSelector_T@@_K@Z";

    // Require a physical device which supports a specific extension.
    add_required_extension :: (selector: PhysicalDeviceSelector, extension: *u8) -> void #foreign libvkbootstrap "?add_required_extension@VkbPhysicalDeviceSelectorFunctions@@YAXPEAUVkbPhysicalDeviceSelector_T@@PEBD@Z";

    // Require a physical device which supports a set of extensions.
    add_required_extensions :: (selector: PhysicalDeviceSelector, extensions: **u8, length: u64) -> void #foreign libvkbootstrap "?add_required_extensions@VkbPhysicalDeviceSelectorFunctions@@YAXPEAUVkbPhysicalDeviceSelector_T@@PEAPEBD_K@Z";

    // Require a physical device that supports a (major, minor) version of vulkan.
    set_minimum_version :: (selector: PhysicalDeviceSelector, major: u32, minor: u32) -> void #foreign libvkbootstrap "?set_minimum_version@VkbPhysicalDeviceSelectorFunctions@@YAXPEAUVkbPhysicalDeviceSelector_T@@II@Z";

    // By default PhysicalDeviceSelector enables the portability subset if available
    // This function disables that behavior
    disable_portability_subset :: (selector: PhysicalDeviceSelector) -> void #foreign libvkbootstrap "?disable_portability_subset@VkbPhysicalDeviceSelectorFunctions@@YAXPEAUVkbPhysicalDeviceSelector_T@@@Z";

    // Require a physical device which supports a specific set of general/extension features.
    // If this function is used, the user should not put their own VkPhysicalDeviceFeatures2 in
    // the pNext chain of VkDeviceCreateInfo.
    //
    // Original function:
    //     template <typename T> PhysicalDeviceSelector& add_required_extension_features(T const& features) {
    //         criteria.extended_features_chain.push_back(features);
    //         return *this;
    //     }
    add_required_extension_features :: (selector: PhysicalDevice, data: *void, size: u64) -> void #foreign libvkbootstrap "?add_required_extension_features@VkbPhysicalDeviceSelectorFunctions@@YAXPEAUVkbPhysicalDevice_T@@PEAX_K@Z";
    add_required_extension_features :: (selector: PhysicalDevice, features: *$T) #no_context {
        add_required_extension_features(selector, features, xx size_of(T));
    }

    // Require a physical device which supports the features in VkPhysicalDeviceFeatures.
    set_required_features :: (selector: PhysicalDeviceSelector, features: *VkPhysicalDeviceFeatures) -> void #foreign libvkbootstrap "?set_required_features@VkbPhysicalDeviceSelectorFunctions@@YAXPEAUVkbPhysicalDeviceSelector_T@@AEBUVkPhysicalDeviceFeatures@@@Z";
    set_required_features :: (selector: PhysicalDeviceSelector, features: VkPhysicalDeviceFeatures) #no_context {
        set_required_features(selector, *features);
    }

    // Require a physical device which supports the features in VkPhysicalDeviceVulkan11Features.
    // Must have vulkan version 1.2 - This is due to the VkPhysicalDeviceVulkan11Features struct being added in 1.2, not 1.1
    set_required_features_11 :: (selector: PhysicalDeviceSelector, features_11: VkPhysicalDeviceVulkan11Features) -> void #foreign libvkbootstrap "?set_required_features_11@VkbPhysicalDeviceSelectorFunctions@@YAXPEAUVkbPhysicalDeviceSelector_T@@UVkPhysicalDeviceVulkan11Features@@@Z";

    // Require a physical device which supports the features in VkPhysicalDeviceVulkan12Features.
    // Must have vulkan version 1.2
    set_required_features_12 :: (selector: PhysicalDeviceSelector, features_12: VkPhysicalDeviceVulkan12Features) -> void #foreign libvkbootstrap "?set_required_features_12@VkbPhysicalDeviceSelectorFunctions@@YAXPEAUVkbPhysicalDeviceSelector_T@@UVkPhysicalDeviceVulkan12Features@@@Z";

    // Require a physical device which supports the features in VkPhysicalDeviceVulkan13Features.
    // Must have vulkan version 1.3
    set_required_features_13 :: (selector: PhysicalDeviceSelector, features_13: VkPhysicalDeviceVulkan13Features) -> void #foreign libvkbootstrap "?set_required_features_13@VkbPhysicalDeviceSelectorFunctions@@YAXPEAUVkbPhysicalDeviceSelector_T@@UVkPhysicalDeviceVulkan13Features@@@Z";

    // Used when surface creation happens after physical device selection.
    // Warning: This disables checking if the physical device supports a given surface.
    defer_surface_initialization :: (selector: PhysicalDeviceSelector) -> void #foreign libvkbootstrap "?defer_surface_initialization@VkbPhysicalDeviceSelectorFunctions@@YAXPEAUVkbPhysicalDeviceSelector_T@@@Z";

    // Ignore all criteria and choose the first physical device that is available.
    // Only use when: The first gpu in the list may be set by global user preferences and an application may wish to respect it.
    select_first_device_unconditionally :: (selector: PhysicalDeviceSelector, unconditionally := true) -> void #foreign libvkbootstrap "?select_first_device_unconditionally@VkbPhysicalDeviceSelectorFunctions@@YAXPEAUVkbPhysicalDeviceSelector_T@@_N@Z";

QueueType :: enum s32 {
    PRESENT  :: 0;
    GRAPHICS :: 1;
    COMPUTE  :: 2;
    TRANSFER :: 3;
}

Device_T :: struct {}
Device :: *Device_T;

// DeviceFunctions
    get_vk_device :: (device: Device) -> VkDevice #foreign libvkbootstrap "?get_vk_device@VkbDeviceFunctions@@YAPEAUVkDevice_T@@PEAUVkbDevice_T@@@Z";
    get_queue_families :: (device: Device, queue_families: **VkQueueFamilyProperties, length: *u64) -> void #foreign libvkbootstrap "?get_queue_families@VkbDeviceFunctions@@YAXPEAUVkbDevice_T@@PEAPEAUVkQueueFamilyProperties@@PEA_K@Z";
    
    // Note: Do not deallocate.
    get_queue_families :: inline (device: Device) -> []VkQueueFamilyProperties #no_context {
        result: []VkQueueFamilyProperties = ---;
        length: u64 = ---;
        get_queue_families(device, *result.data, *length);
        result.count = xx length;
        return result;
    }
    
    get_allocation_callbacks :: (device: Device) -> *VkAllocationCallbacks #foreign libvkbootstrap "?get_allocation_callbacks@VkbDeviceFunctions@@YAPEAUVkAllocationCallbacks@@PEAUVkbDevice_T@@@Z";

    destroy_device :: (device: *Device) -> void #foreign libvkbootstrap "?destroy_device@VkbDeviceFunctions@@YAXPEAPEAUVkbDevice_T@@@Z";

    get_queue_index :: (device: Device, type: QueueType, result: *u32) -> QueueError #foreign libvkbootstrap "?get_queue_index@VkbDeviceFunctions@@YA?AW4VkbQueueError@@PEAUVkbDevice_T@@W4VkbQueueType@@PEAI@Z";
    get_queue_index :: inline (device: Device, type: QueueType) -> u32, QueueError #no_context {
        result: u32 = ---;
        error := get_queue_index(device, type, *result);
        return result, error;
    }
